# tesseract_qt

./: .clang-format  .run-cpack  CHANGELOG.rst  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  colcon.pkg  dependencies.repos  dependencies.rosinstall  dependencies_unstable.repos  dependencies_unstable.rosinstall  package.xml
acm/: CMakeLists.txt
acm/demo/: CMakeLists.txt  acm_demo.cpp
acm/src/: add_allowed_collision_entry_dialog.cpp  allowed_collision_matrix_editor_widget.cpp  allowed_collision_matrix_events.cpp  allowed_collision_matrix_model.cpp  allowed_collision_matrix_tree_view.cpp  allowed_collision_matrix_widget.cpp  generate_allowed_collision_matrix_widget.cpp
collision/: CMakeLists.txt
collision/src/: collision_margin_data_standard_item.cpp  contact_request_standard_item.cpp  contact_result_standard_item.cpp  contact_result_vector_standard_item.cpp  contact_results_compute_widget.cpp  contact_results_events.cpp  contact_results_model.cpp  contact_results_tree_view.cpp  contact_results_widget.cpp
command_language/: CMakeLists.txt
command_language/demo/: CMakeLists.txt  command_language_demo.cpp
command_language/src/: cartesian_waypoint_standard_item.cpp  command_language_events.cpp  composite_instruction_model.cpp  composite_instruction_standard_item.cpp  composite_instruction_widget.cpp  instruction_standard_item.cpp  joint_waypoint_standard_item.cpp  move_instruction_standard_item.cpp  null_instruction_standard_item.cpp  null_waypoint_standard_item.cpp  plan_instruction_standard_item.cpp  set_analog_instruction_standard_item.cpp  set_tool_instruction_standard_item.cpp  state_waypoint_standard_item.cpp  timer_instruction_standard_item.cpp  vector_instruction_standard_item.cpp  wait_instruction_standard_item.cpp
common/: CMakeLists.txt
common/demo/: CMakeLists.txt  json_model_demo.cpp  status_log_demo.cpp  yaml_model_demo.cpp
common/src/: calibration_info_standard_item.cpp  cartesian_editor_widget.cpp  collision_margin_data_standard_item.cpp  combo_box.cpp  component_events.cpp  component_info.cpp  component_info_manager.cpp  component_info_standard_item.cpp  contact_managers_plugin_info_standard_item.cpp  contact_result_types.cpp  entity_container.cpp  entity_manager.cpp  environment_manager.cpp  environment_wrapper.cpp  icon_utils.cpp  image_viewer_widget.cpp  joint_state_standard_item.cpp  joint_trajectory_set.cpp  joint_trajectory_standard_item.cpp  json_model.cpp  kinematics_plugin_info_standard_item.cpp  manipulator_info_standard_item.cpp  model_manager.cpp  namespace_standard_item.cpp  pairs_collision_margin_data_standard_item.cpp  plugin_info_container_standard_item.cpp  plugin_info_standard_item.cpp  plugin_infos.cpp  position_standard_item.cpp  quaternion_standard_item.cpp  rgba_standard_item.cpp  scene_events.cpp  standard_item_utils.cpp  svg_util.cpp  theme_utils.cpp  tool_path.cpp  tool_path_pose.cpp  tool_path_segment.cpp  tool_path_segment_standard_item.cpp  tool_path_standard_item.cpp  (+6 more)
environment/: CMakeLists.txt
environment/demo/: CMakeLists.txt  environment_demo.cpp
environment/src/: environment_commands_model.cpp  environment_commands_standard_item.cpp  environment_commands_widget.cpp  environment_events.cpp  environment_widget.cpp  environment_widget_config.cpp  environment_wrappers.cpp
joint_state_slider/: CMakeLists.txt
joint_state_slider/demo/: CMakeLists.txt  joint_state_slider_demo.cpp
joint_state_slider/src/: joint_state_slider_widget.cpp
joint_trajectory/: CMakeLists.txt
joint_trajectory/demo/: CMakeLists.txt  joint_trajectory_demo.cpp
joint_trajectory/src/: joint_trajectory_info_item.cpp  joint_trajectory_model.cpp  joint_trajectory_plot_dialog.cpp  joint_trajectory_set_item.cpp  joint_trajectory_state_item.cpp  joint_trajectory_tool_bar.cpp  joint_trajectory_widget.cpp
kinematic_groups/: CMakeLists.txt
kinematic_groups/demo/: CMakeLists.txt  groups_joint_states_demo.cpp  kinematic_group_demo.cpp
kinematic_groups/src/: chain_group_standard_item.cpp  group_joint_state_standard_item.cpp  group_joint_states_editor_widget.cpp  group_joint_states_events.cpp  group_joint_states_model.cpp  group_joint_states_standard_item.cpp  group_joint_states_tree_view.cpp  group_joint_states_widget.cpp  group_names_combo_box.cpp  group_tcps_events.cpp  group_tcps_model.cpp  group_tcps_standard_item.cpp  group_tcps_widget.cpp  groups_joint_states_editor_widget.cpp  joint_group_standard_item.cpp  joint_names_combo_box.cpp  kinematic_groups_editor_widget.cpp  kinematic_groups_events.cpp  kinematic_groups_model.cpp  kinematic_groups_widget.cpp  kinematics_info_standard_item.cpp  link_group_standard_item.cpp  link_names_combo_box.cpp  opw_params_standard_item.cpp
manipulation/: CMakeLists.txt
manipulation/demo/: CMakeLists.txt  acm_demo.cpp
manipulation/src/: manipulation_tool_bar.cpp  manipulation_widget.cpp
planning/: CMakeLists.txt
planning/demo/: CMakeLists.txt  task_composer_demo.cpp
planning/src/: continuous_contact_check_task_info_standard_item.cpp  discrete_contact_check_task_info_standard_item.cpp  fix_state_collision_task_info_standard_item.cpp  motion_planner_task_info_standard_item.cpp  planning_profile_remapping_standard_item.cpp  process_planning_future_standard_item.cpp  process_planning_problem_model.cpp  process_planning_problem_standard_item.cpp  process_planning_request_standard_item.cpp  register_poly_types.cpp  task_composer_context_standard_item.cpp  task_composer_data_storage_model.cpp  task_composer_data_storage_standard_item.cpp  task_composer_input_standard_item.cpp  task_composer_keys_standard_item.cpp  task_composer_node_info_map_standard_item.cpp  task_composer_node_info_standard_item.cpp  task_composer_node_info_standard_item_factory.cpp  task_composer_problem_model.cpp  task_composer_problem_standard_item.cpp  task_composer_standard_item_utils.cpp  task_info_map_standard_item.cpp  (+3 more)
plot/: CMakeLists.txt
rendering/: CMakeLists.txt
scene_graph/: CMakeLists.txt
srdf/: CMakeLists.txt
studio/: CMakeLists.txt
tool_path/: CMakeLists.txt
workbench/: CMakeLists.txt
(+864 files in other folders)
