<?xml version="1.0"?>
<package format="2">
  <name>tesseract_qt</name>
  <version>0.18.1</version>
  <description>The Tesseract Qt Widgets and Application package</description>
  <maintainer email="Levi.Armstrong@swri.org">Levi Armstrong</maintainer>
  <license>LGPL-3.0</license>
  <author>Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>tesseract_common</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_geometry</depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_srdf</depend>
  <depend>tesseract_state_solver</depend>
  <depend>tesseract_support</depend>
  <depend>tesseract_urdf</depend>
  <depend>tesseract_visualization</depend>
  <depend>tesseract_command_language</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>tesseract_task_composer</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>libqt5-svg-dev</depend>
  <depend>libqwt-qt5-dev</depend>
  <depend>qt_advanced_docking</depend>
  <depend>graphviz-dev</depend>
  <depend>gz-rendering7</depend>
  <depend>gz-common5</depend>
  <depend>gz-math7</depend>

  <build_depend>libboost-dev</build_depend>
  <build_export_depend>libboost-dev</build_export_depend>
  <exec_depend>libboost-dev</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
